<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:ignore="MissingDefaultResource">

    <include
        android:id="@+id/top_layout"
        layout="@layout/commont_title_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50" />

    <View
        style="@style/horizontal_line"
        android:layout_height="@dimen/dp_5" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/qq_text"
            style="@style/student_text"
            android:layout_marginLeft="@dimen/dp_40"
            android:layout_marginTop="@dimen/dp_40"
            android:text="@string/qq_text"
            android:textSize="@dimen/dp_15"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/qq"
            style="@style/student_text"
            android:layout_marginLeft="@dimen/dp_41"
            android:text="2851052708"
            android:textSize="@dimen/dp_15"
            app:layout_constraintBottom_toBottomOf="@+id/qq_text"
            app:layout_constraintLeft_toRightOf="@+id/qq_text"
            app:layout_constraintTop_toTopOf="@+id/qq_text" />

        <TextView
            android:id="@+id/copy_qq"
            android:layout_width="@dimen/dp_72"
            android:layout_height="@dimen/dp_24"
            android:layout_marginRight="@dimen/dp_40"
            android:background="@drawable/copy_contact_information_background_select"
            android:gravity="center"
            android:text="@string/key_copy"
            android:textColor="@color/white"
            android:textSize="@dimen/dp_12"
            app:layout_constraintBottom_toBottomOf="@+id/qq"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/qq" />

        <View
            android:id="@+id/line"
            style="@style/horizontal_line"
            android:layout_marginLeft="@dimen/dp_40"
            android:layout_marginTop="@dimen/dp_15"
            android:layout_marginRight="@dimen/dp_40"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/copy_qq" />

        <TextView
            android:id="@+id/phone_text"
            style="@style/student_text"
            android:layout_marginLeft="@dimen/dp_40"
            android:layout_marginTop="@dimen/dp_20"
            android:text="@string/phone_text"
            android:textSize="@dimen/dp_15"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/line" />

        <TextView
            android:id="@+id/phone"
            style="@style/student_text"
            android:text="0755-83074265"
            android:textSize="@dimen/dp_15"
            app:layout_constraintBottom_toBottomOf="@+id/phone_text"
            app:layout_constraintLeft_toLeftOf="@+id/qq"
            app:layout_constraintTop_toTopOf="@+id/phone_text" />

        <TextView
            android:id="@+id/copy_phone"
            android:layout_width="@dimen/dp_72"
            android:layout_height="@dimen/dp_24"
            android:layout_marginRight="@dimen/dp_40"
            android:background="@drawable/copy_contact_information_background_select"
            android:gravity="center"
            android:text="@string/key_copy"
            android:textColor="@color/white"
            android:textSize="@dimen/dp_12"
            app:layout_constraintBottom_toBottomOf="@+id/phone"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/phone" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_35"
            android:layout_marginTop="@dimen/dp_42"
            android:layout_marginRight="@dimen/dp_35"
            android:includeFontPadding="false"
            android:text="@string/contact_us_explain"
            android:textColor="@color/text_normal_color2"
            android:textSize="@dimen/dp_13"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/copy_phone" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>